--- a/package.json
+++ b/package.json
@@ -4,11 +4,13 @@
   "description": "my-personal-blog",
   "main": "index.js",
   "scripts": {
+    "start": "node index.js",
+    "dev": "node --watch index.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "Enea Sema",
   "license": "ISC",
   "dependencies": {
-    "espress": "^0.0.0"
+    "express": "^5.1.0"
   }
 }
